--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -67,12 +67,45 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="http://transtats.readthedocs.io/en/latest/" target="_blank">Docs</a></li>-->
+                <li><a href="http://transtats.readthedocs.io/en/latest/" target="_blank">Docs</a></li>
                 <li><a href="{% url 'features' %}">Features</a></li>
                 <li><a href="{% url 'settings' %}">Settings</a></li>
-                <!--<li class="active"><a href="{% url 'register' %}" role="button">Sign Up &raquo;</a></li>-->
-                <li class="active"><a href="#" role="button">Login &raquo;</a></li>
-              </ul>
+                <li><a href="{% url 'register' %}" role="button">Sign Up </a></li>
+                <li class="dropdown active">
+                   <a class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
+                   <ul class="dropdown-menu" style="padding: 15px;min-width: 250px;">
+                      <li>
+                         <div class="row">
+                            <div class="col-md-12">
+                               <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                                 {% csrf_token %}
+                                  <div class="form-group">
+                                     <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                                     <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+                                  </div>
+                                  <div class="form-group">
+                                     <label class="sr-only" for="exampleInputPassword2">Password</label>
+                                     <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                                  </div>
+                                  <div class="checkbox">
+                                     <label>
+                                     <input type="checkbox"> Remember me
+                                     </label>
+                                  </div>
+                                  <div class="form-group">
+                                     <button type="submit" class="btn btn-success btn-block" disabled>Sign in</button>
+                                  </div>
+                               </form>
+                            </div>
+                         </div>
+                      </li>
+                      <li class="divider"></li>
+                      <li>
+                         <input class="btn btn-default btn-block" type="button" id="sign-in-fedora" value="Login with Fedora">
+                      </li>
+                   </ul>
+                </li>
+               </ul>
               <!--{% include "login.html" %}-->
             </div><!--/.navbar-collapse -->
           </div>
