--- a/dashboard/templates/settings/package_new.html
+++ b/dashboard/templates/settings/package_new.html
@@ -41,7 +41,7 @@
             &nbsp;&nbsp;<span class="text-muted"><b>Register a new Package</b></span>
         </span>
         <div class="pull-right">
-            <a type="button" class="btn btn-default" href="{% url 'settings-packages' %}">List Packages</a>
+            <a type="button" class="btn btn-default" href="{% url 'settings-packages' %}">Back to List Packages</a>
         </div>
     </div>
 </div>
