--- a/dashboard/templates/settings/jobs.html
+++ b/dashboard/templates/settings/jobs.html
@@ -89,8 +89,7 @@
     hour(s).<hr/>
     <form method="post" id ="syncform" class="form-horizontal">{% csrf_token %}
         <input type="hidden" value="synctransplatform" id="identifier"/>
-        <button type="submit" data-loading-text="Syncing..." class="btn btn-default"
-                autocomplete="off">Run Now</button>
+        <button type="submit" data-loading-text="Syncing..." class="btn btn-default">Run Now</button>
         <span id="message">&nbsp;&nbsp;This would initiate a sync job to update:
             <span class="text-info"> project details and stats of registered packages.</span></span>
     </form>
