--- a/dashboard/templates/settings/graph_rules.html
+++ b/dashboard/templates/settings/graph_rules.html
@@ -1,9 +1,13 @@
 {% extends "settings/settings_base.html" %}
 
 {% block extrascript %}
+<script src="/static/js/jquery-1.12.3.js"></script>
+<script src="/static/js/jquery.dataTables.min.js"></script>
+<script src="/static/js/dataTables.bootstrap.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
         $('#tab-graph-rules').addClass('active');
+        $('#packages-table').DataTable();
     })
 </script>
 {% endblock %}
@@ -15,5 +19,58 @@
 {% endblock %}
 
 {% block tabcontent %}
-<h5>This section would include rules for custom graphs!!</h5>
+<div class="row">
+    <div class="col-xs-12">
+        <span>
+            <span class="badge">{{ rules|length }}</span> graph rules created.
+        </span>
+        <div class="pull-right">
+            <a class="btn btn-default" role="button" href="#">Add Graph Rule</a>
+        </div>
+    </div>
+</div>
+<hr/>
+<div id="settings-package-content">
+    <table id="packages-table" class="table table-hover table-bordered" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Graph Rule</th>
+                <th>Packages</th>
+                <th>Locales</th>
+                <th>Release Branch</th>
+                <th>Created On</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th>Graph Rule</th>
+                <th>Packages</th>
+                <th>Locales</th>
+                <th>Release Branch</th>
+                <th>Created On</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+            </tr>
+        </tfoot>
+        <tbody>
+            {% for rule in rules %}
+            <tr>
+                <td><span class="text-info">{{ rule.rule_name }}</span></td>
+                <td>{{ rule.rule_packages|join:", " }}</td>
+                <td>{{ rule.rule_langs|join:", " }}</td>
+                <td>{{ rule.rule_relbranch }}</td>
+                <td>{{ rule.created_on }} <span class="glyphicon glyphicon-time" aria-hidden="true"></span></td>
+                <td align="center">
+                  <a class="btn btn-default btn-small disabled"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                </td>
+                <td align="center">
+                  <a class="btn btn-danger btn-small disabled"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
