--- a/dashboard/templates/settings/logs.html
+++ b/dashboard/templates/settings/logs.html
@@ -56,7 +56,7 @@
                             {% for task, details in log.job_log_json.items %}
                             <a href="#" class="list-group-item">
                               <h4 class="list-group-item-heading">{{ task }}</h4>
-                                {% for datetime, event in details.items|dictsort:0 %}
+                                {% for datetime, event in details.items|dictsortreversed:0 %}
                                     <p class="list-group-item-text"><strong>{{ datetime|truncatechars:22 }}&nbsp;&nbsp;&nbsp;</strong>{{ event }}</p>
                                 {% endfor %}
                             </a>
