--- a/dashboard/templates/settings/summary.html
+++ b/dashboard/templates/settings/summary.html
@@ -23,6 +23,7 @@
     <h2><span class="text-info">{{ locales }}</span> <small>Languages</small>&nbsp;&nbsp;&nbsp;
         <span class="text-info">{{ platforms }}</span> <small>Translation Platforms</small>&nbsp;&nbsp;&nbsp;
         <span class="text-info">{{ streams }}</span> <small>Release Streams</small>&nbsp;&nbsp;&nbsp;
+        <span class="text-info">{{ branches }}</span> <small>Release Branches</small>&nbsp;&nbsp;&nbsp;
         <span class="text-info">{{ packages }}</span> <small>Packages</small></h2>
   </div>
 </div>
@@ -34,6 +35,14 @@
     <h2><span class="text-info">{{ jobs_count }}</span>
         <small>jobs ran. {% if jobs_count > 0 %}Last on <span class="text-info">{{ job_last_ran_on }}</span>
             of type <span class="text-info">{{ job_last_ran_type }}</span>.{% endif %}</small></h2>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Graphs</h3>
+  </div>
+  <div class="panel-body">
+    <h2><span class="text-info">{{ graph_rules }}</span> <small>Graph rules</small></h2>
   </div>
 </div>
 {% endblock %}
