--- a/dashboard/templates/stats/graph_base.html
+++ b/dashboard/templates/stats/graph_base.html
@@ -9,8 +9,8 @@
             </div>
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Package wise for enabled languages</a></li>
-                    <li><a href="#">Based on Graph Rules</a></li>
+                    <li id="package-wise-graphs"><a href="{% url 'home' %}">Package wise for enabled languages</a></li>
+                    <li id="rules-wise-graphs"><a href="{% url 'custom-graph' %}">Based on Graph Rules</a></li>
                 </ul>
             </div>
         </div>
