--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -30,6 +30,13 @@
         padding: 20px;
         min-height: 600px;
       }
+      .ribbon {
+        position: absolute;
+        top: 0;
+        right: 0;
+        border: 0;
+        z-index: 9999;
+      }
     </style>
 
     <!-- jQuery and Bootstrap core JS -->
@@ -53,6 +60,9 @@
   </head>
 
   <body>
+    <!--<a href="https://github.com/sundeep-co-in/transtats" target="_blank">-->
+        <!--<img class="ribbon" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png">-->
+    <!--</a>-->
     {% block navbar %}
         <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container">
