--- a/dashboard/templates/settings/graphrule_new.html
+++ b/dashboard/templates/settings/graphrule_new.html
@@ -8,6 +8,7 @@
     {
       return text.toString().toLowerCase()
         .replace(/\s+/g, '-')           // Replace spaces with -
+        .replace(/\./g, '-')            // Replace dot with -
         .replace(/[^\w\-]+/g, '')       // Remove all non-word chars
         .replace(/\-\-+/g, '-')         // Replace multiple - with single -
         .replace(/^-+/, '')             // Trim - from start of text
