--- a/dashboard/templates/settings/stream_branches.html
+++ b/dashboard/templates/settings/stream_branches.html
@@ -35,13 +35,17 @@
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
           <div class="caption">
-            <h3>{{ relbranch.relbranch_name }} <small>{{ relbranch.scm_branch }}</small></h3>
+            <h3>{{ relbranch.relbranch_name }}
+                {% if relbranch.scm_branch %}
+                    <small>{{ relbranch.scm_branch }}</small>
+                {% endif %}
+            </h3>
             <p>
                 <span style="color:grey">Current Status:</span> {{ relbranch.current_phase|capfirst }}
             </p>
             <p>
-                <span style="color:grey">Sync Calender:</span>
-                {% if relbranch.sync_calender %}
+                <span style="color:grey">Sync Calendar:</span>
+                {% if relbranch.sync_calendar %}
                     <span class="glyphicon glyphicon-check" style="color:green"></span>
                 {% else %}
                     <span class="glyphicon glyphicon-ban-circle" style="color:orange"></span>
