--- a/dashboard/templates/settings/jobs.html
+++ b/dashboard/templates/settings/jobs.html
@@ -3,47 +3,8 @@
 {% block extrascript %}
 <script src="/static/js/csrf.js"></script>
 <script type="text/javascript">
-
-    function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    }
-
-    $(document).ready(function() {
-        $('#tab-jobs').addClass('active');
-        $("#syncform").submit(function(event){
-
-            // save button to use it later
-            var submit_button = $(this).find("button");
-
-            // give button loading state
-            submit_button.button('loading');
-
-            $.ajax({
-                 beforeSend: function(xhr, settings) {
-                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                        if (csrftoken) {
-                            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                        } else {
-                            xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
-                        }
-                    }
-                 },
-                 type:"POST",
-                 url:"/ajax/schedule-job",
-                 data: {
-                    // job identification
-                    'job': $('#identifier').val()
-                 },
-                 success: function(response){
-                    $('#message').html(response);
-                    //reset state
-                    submit_button.button('reset');
-                 },
-            });
-            return false; //<---- move it here
-       });
-    })
+function csrfSafeMethod(method){return(/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));}
+$(document).ready(function(){$('#tab-jobs').addClass('active');$("#syncTransForm").submit(function(event){var submit_button=$(this).find("button");submit_button.button('loading');$.ajax({beforeSend:function(xhr,settings){if(!csrfSafeMethod(settings.type)&&!this.crossDomain){if(csrftoken){xhr.setRequestHeader("X-CSRFToken",csrftoken);}else{xhr.setRequestHeader("X-CSRFToken","{{ csrf_token }}");}}},type:"POST",url:"/ajax/schedule-job",data:{'job':$('#syncTransIdentifier').val()},success:function(response){$('#syncTransMsg').html(response);submit_button.button('reset');},});return false;});$("#syncCalendarForm").submit(function(event){var submit_button=$(this).find("button");submit_button.button('loading');$.ajax({beforeSend:function(xhr,settings){if(!csrfSafeMethod(settings.type)&&!this.crossDomain){if(csrftoken){xhr.setRequestHeader("X-CSRFToken",csrftoken);}else{xhr.setRequestHeader("X-CSRFToken","{{ csrf_token }}");}}},type:"POST",url:"/ajax/schedule-job",data:{'job':$('#syncCalendarIdentifier').val()},success:function(response){$('#syncCalendarMsg').html(response);submit_button.button('reset');},});return false;});})
 </script>
 {% endblock %}
 
@@ -87,17 +48,17 @@
       <option>Never</option>
     </select>
     hour(s).<hr/>
-    <form method="post" id ="syncform" class="form-horizontal">{% csrf_token %}
-        <input type="hidden" value="synctransplatform" id="identifier"/>
+    <form method="post" id ="syncTransForm" class="form-horizontal">{% csrf_token %}
+        <input type="hidden" value="synctransplatform" id="syncTransIdentifier"/>
         <button type="submit" data-loading-text="Syncing..." class="btn btn-default">Run Now</button>
-        <span id="message">&nbsp;&nbsp;This would initiate a sync job to update:
+        <span id="syncTransMsg">&nbsp;&nbsp;This would initiate a sync job to update:
             <span class="text-info"> project details and stats of registered packages.</span></span>
     </form>
   </div>
 </div>
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Sync Release Schedule</h3>
+    <h3 class="panel-title">Sync Release Schedule {{ key }}</h3>
   </div>
   <div class="panel-body">
     Update release branch calendars
@@ -107,7 +68,13 @@
       <option>Monthly</option>
       <option class="select-dash" disabled="disabled">-----------------</option>
       <option>Never</option>
-    </select>
+    </select><hr/>
+    <form method="post" id ="syncCalendarForm" class="form-horizontal">{% csrf_token %}
+        <input type="hidden" value="syncrelschedule" id="syncCalendarIdentifier"/>
+        <button type="submit" data-loading-text="Syncing..." class="btn btn-default">Run Now</button>
+        <span id="syncCalendarMsg">&nbsp;&nbsp;This would initiate a sync job to update:
+            <span class="text-info"> event dates in release schedule.</span></span>
+    </form>
   </div>
 </div>
 {% endblock %}
