--- a/dashboard/templates/stats/custom_graph.html
+++ b/dashboard/templates/stats/custom_graph.html
@@ -30,7 +30,7 @@ $(document).ready(function(){$('#rules-wise-graphs').addClass('active');$("#rule
                     {% endfor %}
                 </select>
                 {% else %}
-                    <br/><p>No graph-rules configured. Add <a href="{% url 'settings-graph-rules' %}">one</a> now.</p>
+                    <br/><p>No graph-rules configured. Add <a href="{% url 'settings-graph-rules-new' %}">one</a> now.</p>
                 {% endif %}
             </div>
         </div>
