--- a/dashboard/templates/settings/logs.html
+++ b/dashboard/templates/settings/logs.html
@@ -21,7 +21,7 @@
             <span class="badge">{{ logs|length }}</span> jobs ran.
         </span>
         <span class="pull-right">
-            <button type="button" class="btn btn-default disabled">Archive Logs</button>
+            <!--<button type="button" class="btn btn-default disabled">Archive Logs</button>-->
         </span>
     </div>
 </div>
