--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -77,46 +77,45 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'features' %}">How it works</a></li>
+                <li><a href="{% url 'settings' %}">Inventory and Configuration</a></li>
                 <li><a href="http://transtats.readthedocs.io/en/latest/" target="_blank">Docs</a></li>
-                <li><a href="{% url 'features' %}">Features</a></li>
-                <li><a href="{% url 'settings' %}">Settings</a></li>
-                <li><a href="{% url 'register' %}" role="button">Sign Up </a></li>
-                <li class="dropdown active">
-                   <a class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
-                   <ul class="dropdown-menu" style="padding: 15px;min-width: 250px;">
-                      <li>
-                         <div class="row">
-                            <div class="col-md-12">
-                               <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-                                 {% csrf_token %}
-                                  <div class="form-group">
-                                     <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                                     <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
-                                  </div>
-                                  <div class="form-group">
-                                     <label class="sr-only" for="exampleInputPassword2">Password</label>
-                                     <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
-                                  </div>
-                                  <div class="checkbox">
-                                     <label>
-                                     <input type="checkbox"> Remember me
-                                     </label>
-                                  </div>
-                                  <div class="form-group">
-                                     <button type="submit" class="btn btn-success btn-block" disabled>Sign in</button>
-                                  </div>
-                               </form>
-                            </div>
-                         </div>
-                      </li>
-                      <li class="divider"></li>
-                      <li>
-                         <input class="btn btn-default btn-block" type="button" id="sign-in-fedora" value="Login with Fedora">
-                      </li>
-                   </ul>
-                </li>
+                <!--<li><a href="{% url 'register' %}" role="button">Sign Up </a></li>-->
+                <!--<li class="dropdown active">-->
+                   <!--<a class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>-->
+                   <!--<ul class="dropdown-menu" style="padding: 15px;min-width: 250px;">-->
+                      <!--<li>-->
+                         <!--<div class="row">-->
+                            <!--<div class="col-md-12">-->
+                               <!--<form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">-->
+                                 <!--{% csrf_token %}-->
+                                  <!--<div class="form-group">-->
+                                     <!--<label class="sr-only" for="exampleInputEmail2">Email address</label>-->
+                                     <!--<input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>-->
+                                  <!--</div>-->
+                                  <!--<div class="form-group">-->
+                                     <!--<label class="sr-only" for="exampleInputPassword2">Password</label>-->
+                                     <!--<input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>-->
+                                  <!--</div>-->
+                                  <!--<div class="checkbox">-->
+                                     <!--<label>-->
+                                     <!--<input type="checkbox"> Remember me-->
+                                     <!--</label>-->
+                                  <!--</div>-->
+                                  <!--<div class="form-group">-->
+                                     <!--<button type="submit" class="btn btn-success btn-block" disabled>Sign in</button>-->
+                                  <!--</div>-->
+                               <!--</form>-->
+                            <!--</div>-->
+                         <!--</div>-->
+                      <!--</li>-->
+                      <!--<li class="divider"></li>-->
+                      <!--<li>-->
+                         <!--<input class="btn btn-default btn-block" type="button" id="sign-in-fedora" value="Login with Fedora">-->
+                      <!--</li>-->
+                   <!--</ul>-->
+                <!--</li>-->
                </ul>
-              <!--{% include "login.html" %}-->
             </div><!--/.navbar-collapse -->
           </div>
         </nav>
@@ -140,10 +139,9 @@
         <hr/>
         <footer>
             <div class="container">
-                <p>&copy; 2016 {{ app_name }} | <a href="{% url 'home' %}">Home</a> |
+                <p>&copy; {% now 'Y' %} {{ app_name }} | <a href="{% url 'home' %}">Home</a> |
                   <a href="{% url 'features' %}">Features</a> | <a href="{% url 'settings' %}">Settings</a> |
-                  <a href="{% url 'register' %}">Sign Up</a> | <a href="#">Privacy Policy</a> |
-                  <a href="#">Terms and Conditions</a></p>
+                  <a href="#">Privacy Policy</a> | <a href="#">Terms and Conditions</a></p>
             </div>
         </footer>
     {% endblock %}
