--- a/dashboard/templates/settings/settings_base.html
+++ b/dashboard/templates/settings/settings_base.html
@@ -27,7 +27,7 @@
       <li id="tab-packages" role="presentation"><a href="{% url 'settings-packages' %}">Packages</a></li>
       <li id="tab-jobs" role="presentation"><a href="{% url 'settings-jobs' %}">Jobs</a></li>
       <li id="tab-graph-rules" role="presentation"><a href="{% url 'settings-graph-rules' %}">Graph Rules</a></li>
-      <li id="tab-notification" role="presentation"><a href="{% url 'settings-notification' %}">Notification</a></li>
+      <!--<li id="tab-notification" role="presentation"><a href="{% url 'settings-notification' %}">Notification</a></li>-->
       <li id="tab-logs" role="presentation"><a href="{% url 'settings-logs' %}">Logs</a></li>
     </ul>
     <div style="padding:20px">
