django admin bugfix

--- a/dashboard/templates/settings/languages.html
+++ b/dashboard/templates/settings/languages.html
@@ -34,7 +34,7 @@
         <span class="pull-right">
             {% if user.is_authenticated and user.is_superuser %}
                 <a href="/admin/dashboard/languages/add" role="button" class="btn btn-default">Add Language</a>
-                <a href="/admin/dashboard/languages/" role="button" class="btn btn-default">Manage Languages</a>
+                <a href="/admin/dashboard/languages/" role="button" class="btn btn-default">Edit Languages</a>
             {% else %}
                 <a href="/admin/" role="button" class="btn btn-default">Manage Languages</a>
             {% endif %}
