--- a/dashboard/templates/stats/graph_base.html
+++ b/dashboard/templates/stats/graph_base.html
@@ -5,7 +5,7 @@
     <nav class="navbar navbar-default bg-faded">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Views</a>
+                <a class="navbar-brand" href="#">Graph Views</a>
             </div>
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
