--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -8,14 +8,14 @@
 
 {% block pagecontent %}
     <ul class="nav nav-tabs nav-justified">
-      <li id="tab-translation-position" role="presentation" class="active">
+      <li id="tab-translation-position" role="presentation">
           <a href="{% url 'home' %}">Translation Position</a>
       </li>
       <li id="tab-translation-coverage" role="presentation">
-          <a href="#">Translation Coverage</a>
+          <a href="{% url 'custom-graph' %}">Translation Coverage</a>
       </li>
       <li id="tab-compare-downstream" role="presentation">
-          <a href="#">Compare with Downstream</a>
+          <a href="{% url 'downstream' %}">Compare with Downstream</a>
       </li>
     </ul>
     {% block tabcontent %}{% endblock %}
