--- a/dashboard/templates/stats/custom_graph.html
+++ b/dashboard/templates/stats/custom_graph.html
@@ -1,4 +1,4 @@
-{% extends "stats/graph_base.html" %}
+{% extends "home.html" %}
 
 {% block extrascript %}
 <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="/static/js/excanvas.js"></script><![endif]-->
@@ -14,11 +14,19 @@
 </style>
 <script type="text/javascript">
 function csrfSafeMethod(method){return(/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));}
-$(document).ready(function(){$('#rules-wise-graphs').addClass('active');$("#ruleName").change(function(event){var rule=$(this).val();$.ajax({beforeSend:function(xhr,settings){if(!csrfSafeMethod(settings.type)&&!this.crossDomain){if(csrftoken){xhr.setRequestHeader("X-CSRFToken",csrftoken);}else{xhr.setRequestHeader("X-CSRFToken","{{ csrf_token }}");}}},type:"POST",url:"/ajax/graph-data",data:{'graph_rule':$(this).val()},dataType:"json",success:function(json_response){var dataset=json_response['graph_data'];var ticks=json_response['ticks'];var options={series:{stack:0,lines:{show:true,steps:false,fill:false},bars:{show:true,barWidth:0.4,align:'center',},points:{radius:3,fill:true,show:true},},xaxis:{axisLabel:"Packages",axisLabelUseCanvas:true,axisLabelFontSizePixels:12,axisLabelFontFamily:'Verdana, Arial',axisLabelPadding:10,ticks:ticks},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:true,axisLabelFontSizePixels:12,axisLabelFontFamily:'Verdana, Arial',axisLabelPadding:3,tickFormatter:function(v,axis){return v+"%";},tickDecimals:2,},legend:{noColumns:0,labelBoxBorderColor:"#000000",position:"ne"},grid:{hoverable:true,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:true,content:"%s | %y translated",},};$.plot($("#grapharea"),dataset,options);var disclaimer="<span class='pull-right text-warning'><em>Graph is based on sync\'d data. And %age is calculated on messages.</em></span>";$("#graphdisclaimer").html(disclaimer);},});return false;});});
+$(document).ready(function(){$('#tab-translation-coverage').addClass('active');$("#ruleName").change(function(event){var rule=$(this).val();$.ajax({beforeSend:function(xhr,settings){if(!csrfSafeMethod(settings.type)&&!this.crossDomain){if(csrftoken){xhr.setRequestHeader("X-CSRFToken",csrftoken);}else{xhr.setRequestHeader("X-CSRFToken","{{ csrf_token }}");}}},type:"POST",url:"/ajax/graph-data",data:{'graph_rule':$(this).val()},dataType:"json",success:function(json_response){var dataset=json_response['graph_data'];var ticks=json_response['ticks'];var options={series:{stack:0,lines:{show:true,steps:false,fill:false},bars:{show:true,barWidth:0.4,align:'center',},points:{radius:3,fill:true,show:true},},xaxis:{axisLabel:"Packages",axisLabelUseCanvas:true,axisLabelFontSizePixels:12,axisLabelFontFamily:'Verdana, Arial',axisLabelPadding:10,ticks:ticks},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:true,axisLabelFontSizePixels:12,axisLabelFontFamily:'Verdana, Arial',axisLabelPadding:3,tickFormatter:function(v,axis){return v+"%";},tickDecimals:2,},legend:{noColumns:0,labelBoxBorderColor:"#000000",position:"ne"},grid:{hoverable:true,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:true,content:"%s | %y translated",},};$.plot($("#grapharea"),dataset,options);var disclaimer="<span class='pull-right text-warning'><em>Graph is based on sync\'d data. And %age is calculated on messages.</em></span>";$("#graphdisclaimer").html(disclaimer);},});return false;});});
 </script>
 {% endblock %}
 
-{% block tabsubcontent %}
+{% block tabcontent %}
+    <br/><br/>
+    <nav class="navbar navbar-default bg-faded">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand">Translation coverage of a package list for a specific release in selected languages.</a>
+            </div>
+        </div>
+    </nav>
     <div style="padding:20px">
         <div class="row" style="padding-bottom:20px">
             <div class="col-xs-12">
