--- a/dashboard/templates/stats/downstream.html
+++ b/dashboard/templates/stats/downstream.html
@@ -18,7 +18,7 @@
     <div style="padding:20px">
         <div class="row" style="padding-bottom:20px">
             <div class="col-xs-12">
-                # toDo
+                &nbsp;
             </div>
         </div>
     </div>
